fix styling of overflowing elements and height of servcies section

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,8 @@
     main {
         height: 88vh;
         width: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 }
 
