--- a/src/routes/Services.scss
+++ b/src/routes/Services.scss
@@ -1,6 +1,5 @@
 .services {
-    height: 100%;
-    min-height: min-content;
+    min-height: fit-content;
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
